--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -9,13 +9,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./css/2-snackbar.css" />
-  <title>snackbar</title>
+  <title>Snackbar</title>
 </head>
 
 <body>
   <section>
     <a href="./index.html">Go to home</a>
-    <h1>snackbar</h1>
+    <h1>Snackbar</h1>
   </section>
 
   <form class="form">
