--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./css/1-timer.css" />
-  <title>timer</title>
+  <title>Timer</title>
 </head>
 
 <body>
   <section>
     <a href="./index.html">Go to home</a>
-    <h1>timer</h1>
+    <h1>Timer</h1>
   </section>
 
   <input type="text" id="datetime-picker" />
